# IEP

./: CMakeLists.txt  magazin.cpp  magazin.hpp  main.cpp  produse.cpp  produse.hpp
Tema2/: CMakeLists.txt  circle.cpp  circle.hpp  cylinder.cpp  cylinder.hpp  main.cpp  rectangle.cpp  rectangle.hpp
tema3/: main.cpp  persoana.cpp  persoana.hpp  student.cpp  student.hpp
